# zygisk-module-sample

./: build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yaml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle.kts
module/magisk/: module.prop
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt
